force-app/main/default/objects/Asignacion_Planner__c/Asignacion_Planner__c.object-meta.xml
<CustomObject>
    <description>Base de asignacion de planner por ruta para folios/SP FN. Mantenida por operaciones via la pantalla Carga Base Planner.</description>
    <label>Asignacion Planner</label>
    <nameField>
        <label>Ruta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asignaciones Planner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>