force-app/main/default/objects/Asignacion_Planner__c/fields/Planner__c.field-meta.xml
<CustomField>
    <fullName>Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Asignaciones Planner</relationshipLabel>
    <relationshipName>Asignaciones_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>