force-app/main/default/objects/Asignacion_Planner__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <description>Nombre exacto de la ruta (Carrier Line Load Point) tal como aparece en el folio/SP. Llave unica para carga masiva.</description>
    <externalId>true</externalId>
    <label>Ruta (llave)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>