force-app/main/default/objects/Asignacion_Planner__c/fields/Ruta_Consolidada__c.field-meta.xml
<CustomField>
    <fullName>Ruta_Consolidada__c</fullName>
    <label>Ruta Consolidada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>