force-app/main/default/objects/Asignacion_Planner__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Ruta_Consolidada__c</columns>
    <columns>Planner__c</columns>
    <columns>Activa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>